--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@ bin/
 *.war
 *.ear
 
+# Eclipse files
+.classpath
+.project
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
