--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
               as the first entry and export the buildfile again. -->
 <project basedir="." default="build" name="ZebraViews-Server">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../../../Programming/eclipse"/>
+    <property name="ECLIPSE_HOME" value="NOT NEEDED"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.6"/>
     <property name="source" value="1.6"/>
