--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ bin/
 *.ear
 
 # Eclipse files
-.classpath
+#.classpath
 .project
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
