Fixed small typo causing a new directory to be made in bin

--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
         </javac>
     </target>
     <target name="jar">
-        <mkdir dir="bin/jar" />
+        <mkdir dir="jar" />
         <jar destfile="jar/ZebraViews-Server.jar" basedir="bin">
             <manifest>
                 <attribute name="Main-Class" value="zebradev.zebraviews.server.ServerRunner" />
