--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,7 @@
     <path id="ZebraViews-Server.classpath">
         <pathelement location="bin"/>
         <pathelement location="lib/kryonet-2.21-all.jar"/>
+        <pathelement location="lib/jsoup-1.7.3.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
