--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/kryonet-2.21-all.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.7.3.jar"/>
 	<classpathentry kind="lib" path="build"/>
+	<classpathentry kind="lib" path="lib/sql2o-1.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
