--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
         <pathelement location="lib/jsoup-1.7.3.jar"/>
         <pathelement location="build"/>
         <pathelement location="lib/sql2o-1.5.1.jar"/>
+        <pathelement location="lib/mysql-connector-java-5.1.31-bin.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -37,18 +38,18 @@
             <classpath refid="ZebraViews-Server.classpath"/>
         </javac>
     </target>
-	<target name="jar">
-	        <mkdir dir="jar" />
-	        <jar destfile="jar/ZebraViews-Server.jar" basedir="bin">
-	            <manifest>
-	                <attribute name="Main-Class" value="zebradev.zebraviews.server.ServerRunner" />
-	            </manifest>
-	        </jar>
-	</target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
     <target name="ServerRunner">
         <java classname="zebradev.zebraviews.server.ServerRunner" failonerror="true" fork="yes">
             <classpath refid="ZebraViews-Server.classpath"/>
         </java>
     </target>
+	<target name="jar">
+		        <mkdir dir="jar" />
+		        <jar destfile="jar/ZebraViews-Server.jar" basedir="bin">
+		            <manifest>
+		                <attribute name="Main-Class" value="zebradev.zebraviews.server.ServerRunner" />
+		            </manifest>
+		        </jar>
+	</target>
 </project>
