--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/sql2o-1.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.31-bin.jar"/>
 	<classpathentry kind="lib" path="lib/commons-net-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
