Added json-smart to project

--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,7 @@
         <pathelement location="lib/mysql-connector-java-5.1.31-bin.jar"/>
         <pathelement location="lib/commons-net-3.1.jar"/>
         <pathelement location="lib/commons-codec-1.9.jar"/>
+        <pathelement location="lib/json-smart-1.2.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
